Fix undo stack ordering for all-but-typing commands

When one top-level editing command triggers another command via
event handlers, Blink used to have their undo ordering reversed.
The reason is that the enstacking of commands is not protected
by EventQueueScope; consequently, the commands are executed in
a nested manner, making the first command end later than the
second command.

This patch protects everything in CompositeEditCommand::apply
with EventQueueScope, so that the nesting behavior for all
commands (except TypingCommand) is eliminated.

BUG=685975
TEST=editing/undo/drag_with_mutation_event_undo_order.html

Review-Url: https://codereview.chromium.org/2674173002
Cr-Commit-Position: refs/heads/master@{#452095}

Former-commit-id: 91ce4c5c6b3c38b5291c94d897f691b30282cd79